z-index fixed on share-box

--- a/web/bundles/dodicifansworldweb/less/global.less
+++ b/web/bundles/dodicifansworldweb/less/global.less
@@ -17,6 +17,7 @@
     border-radius: 3px;
     position: absolute;
     color: @black;
+    z-index: 9999999;
     
     .arrow {
         top: -6px;
